<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activity_info">Activity Info</string>
    <string name="agree">User Agreements</string>
    <string name="app_name">Tales of Tera Blast</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="facebook_app_id">856914012158713</string>
    <string name="facebook_client_token">ff00e61e75ef92502e20be7cda446c5c</string>
    <string name="fb_login_protocol_scheme">fb856914012158713</string>
    <string name="hw_accountCenter_account_balance">Balance:</string>
    <string name="hw_accountCenter_account_name">Username:</string>
    <string name="hw_accountCenter_apple">Apple</string>
    <string name="hw_accountCenter_bind">Bind</string>
    <string name="hw_accountCenter_bind_ed">Bound</string>
    <string name="hw_accountCenter_cdkey_btn_copy">Copy</string>
    <string name="hw_accountCenter_cdkey_btn_ok">Confirm</string>
    <string name="hw_accountCenter_cdkey_content">\10Migration code:\10</string>
    <string name="hw_accountCenter_cdkey_username_content">Account ID:</string>
    <string name="hw_accountCenter_changePassword">Change Password</string>
    <string name="hw_accountCenter_copy_failed">copy failed</string>
    <string name="hw_accountCenter_copy_success">copy success</string>
    <string name="hw_accountCenter_email">Email</string>
    <string name="hw_accountCenter_email_band">This email has been bound to another account. Please try again.</string>
    <string name="hw_accountCenter_fb">Facebook</string>
    <string name="hw_accountCenter_getCdKey">获取迁移码</string>
    <string name="hw_accountCenter_gpplus">Google</string>
    <string name="hw_accountCenter_line">Line</string>
    <string name="hw_accountCenter_logoutAccount">Logout</string>
    <string name="hw_accountCenter_msg_bindOther">Your account will be insecure upon unbinding. Please bind it to a platform for security reasons.</string>
    <string name="hw_accountCenter_msg_isUnbind">By doing this, you can no longer login the game with this account. Do you wish to Continue?</string>
    <string name="hw_accountCenter_msg_logout">Guest account cannot be retrieved after deletion. Do you wish to Continue?</string>
    <string name="hw_accountCenter_naver">Naver</string>
    <string name="hw_accountCenter_play">PlayGames</string>
    <string name="hw_accountCenter_role_id_copy">copy</string>
    <string name="hw_accountCenter_role_id_title">role id:</string>
    <string name="hw_accountCenter_status_freePlaying">Guest/Insecure</string>
    <string name="hw_accountCenter_status_isBinding">Registered/Secure</string>
    <string name="hw_accountCenter_status_name">Current Mode</string>
    <string name="hw_accountCenter_twitter">Twitter</string>
    <string name="hw_accountCenter_unbind">Unbind</string>
    <string name="hw_accountCenter_vk">VK</string>
    <string name="hw_accountCenter_warm">Warning</string>
    <string name="hw_accountCenter_warm_cancel">Cancel</string>
    <string name="hw_accountCenter_warm_sure">Confirm</string>
    <string name="hw_account_announce_button_cancel">Cancel</string>
    <string name="hw_account_announce_button_ok">Confirm</string>
    <string name="hw_account_announce_tile">Terms of Service</string>
    <string name="hw_account_center_side_fbshare">Facebook</string>
    <string name="hw_account_center_side_game">Game</string>
    <string name="hw_account_center_side_gift">Gift</string>
    <string name="hw_account_center_side_mine">Mine</string>
    <string name="hw_account_is_trashed_content">The account is being logged out. If you wish to cancel it, please click confirm</string>
    <string name="hw_account_recover_success_content">The account has been recovered, please re-login.</string>
    <string name="hw_account_recover_title">Notification</string>
    <string name="hw_account_trash">Account deletion</string>
    <string name="hw_account_trash_button_cancel">Cancel</string>
    <string name="hw_account_trash_button_ok">Confirm</string>
    <string name="hw_account_trash_content">All data regarding with this account will be permanently deleted. Proceed with the deletion?</string>
    <string name="hw_account_trash_success_content_1">Successfully deleted!</string>
    <string name="hw_account_trash_success_content_2">The account has been logged out and can be recovered within seven days</string>
    <string name="hw_activity_bindEmail_des">Email cannot be unbound upon binding.</string>
    <string name="hw_autoLogin_loading">Loading…</string>
    <string name="hw_autoLogin_switchAccount">Switch Account</string>
    <string name="hw_bindEmail_bind">Bind</string>
    <string name="hw_bindEmail_des">Enter your email address to receive a verification code. If you do not receive the email, please check your spam folder.</string>
    <string name="hw_bindEmail_sendCode">Confirm</string>
    <string name="hw_bindEmail_title">Bind with Email</string>
    <string name="hw_changePassword_can_not_equal">Please use a different password than your old password.</string>
    <string name="hw_changePassword_newPassword">New</string>
    <string name="hw_changePassword_oldPassword">Current</string>
    <string name="hw_changePassword_submit">Confirm</string>
    <string name="hw_changePassword_title">Change Password</string>
    <string name="hw_collecting_like">Not enough likes</string>
    <string name="hw_des_back">Back</string>
    <string name="hw_des_code">Code</string>
    <string name="hw_des_email">Email</string>
    <string name="hw_des_exit">Exit</string>
    <string name="hw_des_facebook">Facebook</string>
    <string name="hw_des_google">Google</string>
    <string name="hw_des_line">Line</string>
    <string name="hw_des_naver">Naver</string>
    <string name="hw_des_password">Password</string>
    <string name="hw_des_playgame">PlayGames</string>
    <string name="hw_des_twitter">Twitter</string>
    <string name="hw_des_vk">VK</string>
    <string name="hw_error_code_empty">Please enter the code</string>
    <string name="hw_error_code_invalid">Please enter a valid code</string>
    <string name="hw_error_email_empty">Email cannot be empty</string>
    <string name="hw_error_email_invalid">Please enter a valid email</string>
    <string name="hw_error_password_empty">Password cannot be empty</string>
    <string name="hw_error_password_invalid">Password not long enough</string>
    <string name="hw_facebook_login_cancel">Login canceled</string>
    <string name="hw_facebook_login_error">Login failed.</string>
    <string name="hw_facebook_login_success">Login successful</string>
    <string name="hw_facebook_nogift">Gift pack unavailable</string>
    <string name="hw_facebook_share_cancel">Sharing canceled</string>
    <string name="hw_facebook_share_error">Sharing failed</string>
    <string name="hw_facebook_share_success">Sharing successful</string>
    <string name="hw_fb_login">Sign in via Facebook</string>
    <string name="hw_floating_customerService">CS</string>
    <string name="hw_gameTips_continue">Continue</string>
    <string name="hw_gameTips_des">You are playing as a guest. If you delete the app or switch your device, you will lose your game progress. Please bind your account.</string>
    <string name="hw_gameTips_ignoreIt">Ignore</string>
    <string name="hw_gameTips_register">Bind</string>
    <string name="hw_gameTips_title">Notification</string>
    <string name="hw_gg_login">Sign in via Google</string>
    <string name="hw_guest_login">Guest Mode</string>
    <string name="hw_inputBox_validationCode_hint">Verification Code</string>
    <string name="hw_login_CdKeyLogin">Submit</string>
    <string name="hw_login_forgot">Forgot Password?</string>
    <string name="hw_login_freePlay">Guest Mode</string>
    <string name="hw_login_login">Login</string>
    <string name="hw_login_register">Register</string>
    <string name="hw_login_title">Login</string>
    <string name="hw_msg_email_code">Sending</string>
    <string name="hw_register_agree">Agree to User Agreements</string>
    <string name="hw_register_signUp">Submit</string>
    <string name="hw_register_title">Register</string>
</resources>