<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:layout_gravity="center" android:background="@drawable/bg_register_hw" android:layout_width="@dimen/hw_dialog_width" android:layout_height="wrap_content" android:layout_margin="@dimen/hw_dialog_marginParent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/hw_dialog_margin_leftRight" android:layout_marginRight="@dimen/hw_dialog_margin_leftRight">
            <TextView android:textSize="@dimen/hw_dialog_title_textSize" android:textColor="@color/hw_dialog_title_textColor" android:layout_gravity="center" android:id="@+id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/hw_dialog_title_margin_topBottom" android:text="@string/hw_gameTips_title"/>
            <TextView android:textSize="@dimen/hw_dialog_des_textSize" android:textColor="@color/hw_dialog_content_textColor" android:id="@+id/tv_content" android:layout_width="match_parent" android:layout_height="63dp" android:layout_marginTop="@dimen/hw_dialog_context_margin_topBottom" android:text="@string/hw_gameTips_des"/>
            <CheckBox android:textColor="@color/hw_dialog_content_textColor" android:id="@+id/cb_ignore" android:paddingLeft="6dp" android:paddingRight="6dp" android:layout_width="wrap_content" android:layout_height="48dp" android:layout_marginTop="10dp" android:button="@drawable/hw_checkbox_button" android:text="@string/hw_gameTips_ignoreIt"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="@dimen/hw_dialog_button_height" android:layout_marginTop="@dimen/hw_dialog_submit_margin_topBottom" android:layout_marginBottom="@dimen/hw_dialog_margin_topBottom">
                <TextView android:textStyle="bold" android:textColor="@color/hw_dialog_content_textColor_b" android:gravity="center" android:id="@+id/tv_continue" android:background="@drawable/hw_button_colourless_bg_selector" android:clickable="true" android:layout_width="match_parent" android:layout_height="@dimen/hw_dialog_button_height" android:layout_marginRight="10dp" android:text="@string/hw_gameTips_continue" android:layout_weight="1"/>
                <TextView android:textStyle="bold" android:textColor="@color/hw_dialog_content_textColor_a" android:gravity="center" android:id="@+id/tv_register" android:background="@drawable/hw_button_coloured_bg_selector" android:clickable="true" android:layout_width="match_parent" android:layout_height="@dimen/hw_dialog_button_height" android:layout_marginLeft="10dp" android:text="@string/hw_gameTips_register" android:layout_weight="1"/>
                <TextView android:id="@+id/tv_register_tomato" android:visibility="gone" android:layout_width="0dp" android:layout_height="0dp"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>
