<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:layout_gravity="center" android:id="@+id/qg_view_regist_content" android:background="@drawable/bg_register_hw" android:layout_width="@dimen/hw_dialog_width" android:layout_height="wrap_content" android:layout_margin="@dimen/hw_dialog_marginParent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="@dimen/hw_dialog_margin_leftRight" android:layout_marginRight="@dimen/hw_dialog_margin_leftRight">
            <TextView android:textSize="@dimen/hw_dialog_title_textSize" android:textColor="@color/hw_dialog_title_textColor" android:layout_gravity="center" android:id="@+id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/hw_dialog_title_margin_topBottom" android:layout_marginBottom="@dimen/hw_dialog_title_margin_topBottom" android:text="@string/hw_register_title"/>
            <include layout="@layout/hw_view_register_email_with_password_a"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/ll_code" android:padding="@dimen/hw_inputBox_padding" android:layout_width="match_parent" android:layout_height="@dimen/hw_inputBox_height">
                <EditText android:textSize="@dimen/hw_inputBox_textSize" android:textColor="@color/hw_dialog_content_textColor" android:textColorHint="@color/hw_inputBox_hint_textColor" android:id="@+id/et_code" android:background="@drawable/et_underline_selector" android:paddingLeft="@dimen/hw_inputBox_editView_padding" android:paddingRight="@dimen/hw_inputBox_editView_padding" android:layout_width="0dp" android:layout_height="match_parent" android:hint="@string/hw_inputBox_validationCode_hint" android:ems="20" android:layout_weight="1" android:inputType="textEmailAddress" android:imeOptions="actionNext" android:nextFocusForward="@+id/et_password"/>
                <TextView android:textColor="@color/hw_dialog_content_textColor_a" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_code_resend" android:background="@drawable/hw_button_send_bg_selector" android:clickable="true" android:layout_width="@dimen/hw_resendButton_width" android:layout_height="match_parent" android:layout_margin="4dp" android:text="@string/hw_msg_email_code"/>
            </LinearLayout>
            <CheckBox android:textSize="@dimen/hw_dialog_des_textSize" android:textColor="@color/hw_dialog_content_textColor" android:id="@+id/cb_agree" android:paddingLeft="6dp" android:paddingRight="6dp" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/hw_login_register_agree_margin" android:checked="false" android:button="@drawable/hw_checkbox_button" android:text="@string/hw_register_agree" android:layout_weight="1"/>
            <TextView android:textStyle="bold" android:textColor="@color/hw_dialog_content_textColor_a" android:gravity="center" android:id="@+id/tv_signUp" android:background="@drawable/hw_button_coloured_bg_selector" android:clickable="true" android:layout_width="match_parent" android:layout_height="@dimen/hw_dialog_button_height" android:layout_marginTop="@dimen/hw_dialog_button_margin_topBottom" android:layout_marginBottom="@dimen/hw_dialog_button_margin_topBottom" android:text="@string/hw_register_signUp"/>
            <TextView android:textSize="@dimen/hw_dialog_des_textSize" android:textColor="@drawable/qg_text_btn_text_color_selector" android:id="@+id/tv_user_agreement" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginBottom="10dp" android:text="@string/agree"/>
        </LinearLayout>
        <include layout="@layout/qg_view_exit_btn"/>
    </FrameLayout>
</FrameLayout>
