<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:layout_gravity="center" android:id="@+id/frame_login" android:background="@drawable/hw_dialog_bg" android:layout_width="@dimen/hw_dialog_width" android:layout_height="wrap_content" android:layout_margin="@dimen/hw_dialog_marginParent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/hw_dialog_margin_leftRight" android:layout_marginRight="@dimen/hw_dialog_margin_leftRight">
            <ImageView android:layout_gravity="center" android:id="@+id/iv_login_logo" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="17dp" android:layout_marginBottom="5dp">
                <requestFocus/>
            </ImageView>
            <TextView android:textSize="@dimen/hw_dialog_title_textSize" android:textColor="@color/hw_dialog_title_textColor" android:layout_gravity="center" android:id="@+id/tv_title" android:focusable="true" android:focusableInTouchMode="true" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/hw_dialog_title_margin_topBottom" android:layout_marginBottom="@dimen/hw_dialog_title_margin_topBottom" android:text="@string/hw_login_title">
                <requestFocus/>
            </TextView>
            <include layout="@layout/hw_view_login_email_with_password_a"/>
            <include android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/hw_view_login_cdkey"/>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/ll_forgot_regist" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/hw_dialog_item_margin_topBottom" android:layout_marginBottom="@dimen/hw_dialog_item_margin_topBottom">
                <TextView android:textColor="@drawable/qg_text_btn_text_color_selector" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/tv_forgot" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hw_login_forgot"/>
                <TextView android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
                <TextView android:textColor="@drawable/qg_text_btn_text_color_selector" android:gravity="right|center_vertical|center_horizontal|center|end" android:id="@+id/tv_register" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hw_login_register"/>
            </LinearLayout>
            <TextView android:textStyle="bold" android:textColor="@color/hw_dialog_content_textColor_a" android:gravity="center" android:id="@+id/tv_login" android:background="@drawable/hw_button_coloured_bg_selector" android:clickable="true" android:layout_width="match_parent" android:layout_height="@dimen/hw_dialog_button_height" android:text="@string/hw_login_login"/>
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@+id/ll_google_login" android:background="@drawable/hw_button_google_bg_selector" android:layout_width="match_parent" android:layout_height="@dimen/hw_dialog_button_height" android:layout_marginTop="@dimen/hw_dialog_item_margin_topBottom">
                <ImageView android:id="@+id/iv_google_login" android:background="@drawable/google_login" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                <TextView android:textStyle="bold" android:textColor="@color/sdk_google_login_btn_tv" android:gravity="center" android:id="@+id/tv_google_login" android:paddingLeft="5dp" android:paddingRight="5dp" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/hw_gg_login"/>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@+id/ll_fb_login" android:background="@drawable/hw_button_google_bg_selector" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/hw_dialog_button_height" android:layout_marginTop="@dimen/hw_dialog_item_margin_topBottom">
                <ImageView android:background="@drawable/facebook_login" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                <TextView android:textStyle="bold" android:textColor="#80000000" android:gravity="center" android:paddingLeft="5dp" android:paddingRight="5dp" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/hw_fb_login"/>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/ll_guest_and_fb" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="@dimen/hw_dialog_item_margin_topBottom">
                <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@+id/ll_guest_login_new" android:background="@drawable/sdk_login_index_fb_and_guest_button_bg_selector" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="0dp" android:layout_height="@dimen/hw_dialog_button_height" android:layout_weight="1">
                    <ImageView android:id="@+id/iv_guest_login_new" android:background="@drawable/guest_login" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="google login new"/>
                    <TextView android:textSize="12sp" android:textStyle="bold" android:textColor="@color/sdk_fb_and_guest_login_btn_tv" android:gravity="center" android:id="@+id/tv_guest_login_new" android:paddingLeft="5dp" android:paddingRight="5dp" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/hw_login_freePlay"/>
                </LinearLayout>
                <TextView android:layout_gravity="center" android:id="@+id/interval_tv" android:layout_width="8dp" android:layout_height="match_parent"/>
                <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@+id/ll_fb_login_new" android:background="@drawable/sdk_login_index_fb_and_guest_button_bg_selector" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="0dp" android:layout_height="@dimen/hw_dialog_button_height" android:layout_weight="1">
                    <ImageView android:id="@+id/iv_fb_login_new" android:background="@drawable/facebook_login" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="fb login new"/>
                    <TextView android:textSize="12sp" android:textStyle="bold" android:textColor="@color/sdk_fb_and_guest_login_btn_tv" android:gravity="center" android:id="@+id/tv_fb_login_new" android:paddingLeft="5dp" android:paddingRight="5dp" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="Facebook"/>
                </LinearLayout>
            </LinearLayout>
            <TextView android:textStyle="bold" android:textColor="@color/hw_dialog_content_textColor_b" android:gravity="center" android:id="@+id/tv_useCdKey" android:background="@drawable/hw_button_colourless_bg_selector" android:clickable="true" android:layout_width="match_parent" android:layout_height="@dimen/hw_dialog_button_height" android:layout_marginTop="@dimen/hw_dialog_item_margin_topBottom" android:text="@string/hw_login_CdKeyLogin"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/layout_login_ib" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/hw_login_item_to_side" android:layout_marginBottom="@dimen/hw_login_item_to_side">
                <FrameLayout android:id="@+id/fl_guest" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
                    <ImageButton android:layout_gravity="center" android:id="@+id/ib_guest" android:background="@drawable/hw_guest" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/hw_guest_login"/>
                </FrameLayout>
                <FrameLayout android:id="@+id/fl_twitter" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
                    <ImageButton android:layout_gravity="center" android:id="@+id/ib_twitter" android:background="@drawable/hw_twitter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/hw_des_twitter"/>
                </FrameLayout>
                <FrameLayout android:id="@+id/fl_facebook" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
                    <ImageButton android:layout_gravity="center" android:id="@+id/ib_facebook" android:background="@drawable/hw_facebook" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/hw_des_facebook"/>
                </FrameLayout>
                <FrameLayout android:id="@+id/fl_naver" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
                    <ImageButton android:layout_gravity="center" android:id="@+id/ib_naver" android:background="@drawable/hw_naver" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/hw_des_naver"/>
                </FrameLayout>
                <FrameLayout android:id="@+id/fl_line" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
                    <ImageButton android:layout_gravity="center" android:id="@+id/ib_line" android:background="@drawable/hw_line" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/hw_des_line"/>
                </FrameLayout>
                <FrameLayout android:id="@+id/fl_vk" android:visibility="gone" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
                    <ImageButton android:layout_gravity="center" android:id="@+id/ib_vk" android:background="@drawable/hw_vk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/hw_des_vk"/>
                </FrameLayout>
                <FrameLayout android:id="@+id/fl_apple" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
                    <ImageButton android:layout_gravity="center" android:id="@+id/ib_apple" android:background="@drawable/apple_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="apple login"/>
                </FrameLayout>
                <FrameLayout android:id="@+id/fl_playgame" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
                    <ImageButton android:layout_gravity="center" android:id="@+id/ib_playgame" android:background="@drawable/hw_googlegame" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/hw_des_playgame"/>
                </FrameLayout>
                <FrameLayout android:id="@+id/fl_taptap" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
                    <ImageButton android:layout_gravity="center" android:id="@+id/ib_taptap" android:background="@drawable/taptap_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/hw_des_playgame"/>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
        <include android:visibility="gone" layout="@layout/qg_view_exit_btn"/>
    </FrameLayout>
</FrameLayout>
